recursion.logo.tree.Tree.scala.error
Erreur de compilation :
Tree:5: error: '<-' expected but '=' found.
  for(i=0;i<=4,i++){
       ^Tree:5: error: illegal start of simple expression
  for(i=0;i<=4,i++){
         ^Tree:5: error: '<-' expected but ',' found.
  for(i=0;i<=4,i++){
              ^Tree:45: error: illegal start of simple expression
} 
^